<resources>

    // universal strings
    <string name="app_name">EncryptAChat</string>
    <string name="start_page">Welcome to EncryptAChat</string>
    <string name="login_page">Login Page</string>
    <string name="signup">Sign Up</string>
    <string name="back_button">Back</string>
    <string name="logout">Logout</string>

    // login page
    <string name="login">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    // sign up page
    <string name="signup_page">Sign Up Page</string>
    <string name="email">Email Address</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="create_account">Create Account</string>

    // messages page
    <string name="messages">Messages</string>
    <string name="msg_1">Message from: User1</string>
    <string name="msg_2">Message from: User2</string>
    <string name="msg_3">Message from: User3</string>

    // settings page
    <string name="settings">Settings</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="edit_username">Edit Username</string>
    <string name="edit_email">Edit Email Address</string>
    <string name="edit_password">New Password</string>
    <string name="confirm_new_pass">Confirm Old Password</string>

</resources>