<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessagesPage"
    android:background="@color/background">

    <TextView
        android:id="@+id/MessagePageHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/messages"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/firstContact"
        android:layout_below="@id/MessagePageHeader"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:text="@string/msg_1"
        />

    <Button
        android:id="@+id/secondContact"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_below="@+id/firstContact"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/msg_2"
        />

    <Button
        android:id="@+id/thirdContact"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_below="@+id/secondContact"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/msg_3"
        />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/MessagePageHeader"
        android:layout_marginTop="570dp"
        android:layout_marginStart="20dp"
        android:text="@string/logout"
        tools:layout_editor_absoluteX="158dp" />

</RelativeLayout>