<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/page2Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/login_page"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/page2Header"
        android:layout_marginTop="570dp"
        android:layout_marginStart="20dp"
        android:text="@string/back_button"
        tools:layout_editor_absoluteX="158dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/login" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/page2Header"
        android:layout_marginTop="200dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/username"
        android:autofillHints="username"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/editTextUsername"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/password"
        android:autofillHints="emailAddress"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:textColor="@color/white" />

</RelativeLayout>